--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <p>Click Upgrades Owned: <span id="click-upgrades-owned">0</span></p>
             <p>Passive Upgrades Owned: <span id="passive-upgrades-owned">0</span></p>
             <button class="btn-reset" onclick="showResetModal()">Reset Data</button>
+            <button onclick="sendToRepo()">Made by Tanese</button>
         </div>
         <div id="reset-modal" class="modal">
             <div class="modal-content">
